# InfinityXR

./: .clang-format  .clang-tidy  .gitignore  .qmlformat.ini  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/Plugins/: CMakeLists.txt
src/Plugins/About/: .qmlls.ini  AboutDialog.qml  CMakeLists.txt  aboutmanifest.h  aboutplugin.cpp  aboutplugin.h  manifest.json  showaboutcommand.h
src/Plugins/Authentication/: .qmlls.ini  CMakeLists.txt  LoginView.qml  authplugin.cpp  authplugin.h  authservice.cpp  authservice.h  logincommand.cpp  logincommand.h  manifest.json
src/app/: .qmlls.ini  CMakeLists.txt  main.cpp
src/app/bootstrap/: appbootstrap.cpp  appbootstrap.h  appbootstrapcontext.h  appbootstrapcontext.h.rej  authextensionhandler.h  ibootstrapinstallers.h
src/app/bootstrap/installers/: coreservicesinstaller.cpp  coreservicesinstaller.h  qmltypesinstaller.cpp  qmltypesinstaller.h
src/app/i18n/: InfinityApp_af-ZA.ts  InfinityApp_am-ET.ts  InfinityApp_ar-EG.ts  InfinityApp_ar-SA.ts  InfinityApp_az-AZ.ts  InfinityApp_be-BY.ts  InfinityApp_bg-BG.ts  InfinityApp_bs-BA.ts  InfinityApp_ca-ES.ts  InfinityApp_cs-CZ.ts  InfinityApp_cy-GB.ts  InfinityApp_da-DK.ts  InfinityApp_de-AT.ts  InfinityApp_de-DE.ts  InfinityApp_el-GR.ts  InfinityApp_en-GB.ts  InfinityApp_es-ES.ts  InfinityApp_es-MX.ts  InfinityApp_et-EE.ts  InfinityApp_eu-ES.ts  InfinityApp_fa-IR.ts  InfinityApp_fi-FI.ts  InfinityApp_fil-PH.ts  InfinityApp_fr-CA.ts  InfinityApp_fr-FR.ts  InfinityApp_ga-IE.ts  InfinityApp_gn-PY.ts  InfinityApp_ha-NG.ts  InfinityApp_he-IL.ts  InfinityApp_hi-IN.ts  InfinityApp_hr-HR.ts  InfinityApp_hu-HU.ts  InfinityApp_hy-AM.ts  InfinityApp_id-ID.ts  InfinityApp_is-IS.ts  InfinityApp_it-IT.ts  InfinityApp_ja-JP.ts  InfinityApp_ka-GE.ts  InfinityApp_kk-KZ.ts  InfinityApp_km-KH.ts  (+42 more)
src/app/modules/qone/: CMakeLists.txt
src/app/modules/qone/SplashScreen/: .qmlls.ini  CMakeLists.txt  Splash.qml
src/app/services/: screenhelper.cpp  screenhelper.h  systemsignalhandler.cpp  systemsignalhandler.h  thememanager.cpp  thememanager.h
src/app/views/: CircularProgress.qml  DialogManager.qml  Main.qml  MenuBuilder.qml  MenuItemLoader.qml  NotificationOverlay.qml  PreferencesDialog.qml  PrimaryWindow.qml  ToastItem.qml
src/libs/infinity_core/: .qmlls.ini  CMakeLists.txt
src/libs/infinity_core/include/Infinity/core/interaction/: actiondispatcher.h  commandregistry.h  showpreferencescommand.h
src/libs/infinity_core/include/Infinity/core/kernel/: IPluginExtensionHandler.h  commandextensionhandler.h  contextextensionhandler.h  plugininstance.h  pluginloader.h  pluginmanager.h  pluginscanner.h  preferencesextensionhandler.h  viewextensionhandler.h
src/libs/infinity_core/include/Infinity/core/messaging/: eventbus.h
src/libs/infinity_core/include/Infinity/core/services/: httpservice.h  notificationservice.h  preferencesregistry.h  qsettingsbackend.h  serviceregistry.h  settingsservice.h  sqlitenotificationrepository.h
src/libs/infinity_core/include/Infinity/core/ui/: dialogregistry.h  dialogservice.h  menumodel.h  menunode_p.h  notificationfiltermodel.h  notificationmodel.h  pluginlistmodel.h  preferencesmenumodel.h  sessionmanager.h  systemuimanifest.h  viewregistry.h
src/libs/infinity_core/include/Infinity/core/utils/: enumUtils.hpp  singleton.hpp
src/libs/infinity_core/src/interaction/: actiondispatcher.cpp  commandregistry.cpp
src/libs/infinity_core/src/kernel/: commandextensionhandler.cpp  contextextensionhandler.cpp  plugininstance.cpp  pluginloader.cpp  pluginmanager.cpp  pluginscanner.cpp  preferencesextensionhandler.cpp  viewextensionhandler.cpp
src/libs/infinity_core/src/messaging/: eventbus.cpp
src/libs/infinity_core/src/services/: dialogservice.cpp  httpservice.cpp  notificationservice.cpp  preferencesregistry.cpp  qsettingsbackend.cpp  serviceregistrationobserver.cpp  serviceregistry.cpp  settingsservice.cpp  sqlitenotificationrepository.cpp
src/libs/infinity_core/src/ui/: menumodel.cpp  notificationfiltermodel.cpp  notificationmodel.cpp  pluginlistmodel.cpp  preferencesmenumodel.cpp  sessionmanager.cpp  viewregistry.cpp
src/sdk/: CMakeLists.txt
src/sdk/include/Infinity/sdk/contracts/: AuthEvents.h  IAuthService.h  ICommandContributor.h  ICommandRegistry.h  IDialogService.h  IEventBus.h  IEventBusService.h  IEventPublisher.h  IEventSubscriber.h  IHttpService.h  INotificationRepository.h  IPlugin.h  IPreferencesContributor.h  IRequiresContext.h  IServiceRegistry.h  ISettingsService.h  IViewContributor.h  IViewFactory.h  PluginEvents.h
src/sdk/include/Infinity/sdk/types/: ActionDescriptor.h  CommandDescriptor.h  CommandId.h  EventSubscription.h  NotificationDescriptor.h  NotificationEvents.h  PluginDescriptor.h  PreferenceDescriptor.h  Types.h  Version.h  ViewDescriptor.h  ViewId.h
src/sdk/templates/: logger.cpp.in  logger.h.in  sdkVersion.h.in
tests/: CMakeLists.txt
translations/: InfinityCore_en-US.ts
